--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-web = {version = "4.9.0", features = ["macros"]}
+actix-web = {version = "4", features = ["macros"]}
 supabase-actix-auth_middleware = { git = "https://github.com/hscii/jwt-middleware-crate.git" }
 actix-web-httpauth = "0.8.2"
+actix-rt = "2.10.0"
