--- a/.github/workflows/docker_deploy.yml
+++ b/.github/workflows/docker_deploy.yml
@@ -1,19 +1,23 @@
-name: Docker Deploy
+name: Deploy to Cloud Run
 
-oon:
+on:
   push:
     branches:
       - main
+
+permissions:
+  contents: read
+  id-token: write
 
 env:
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   GCP_REGION: ${{ secrets.GCP_REGION }}
   GCP_SERVICE_NAME: ${{ secrets.GCP_SERVICE_NAME }}
+  GCP_ARTIFACT_REGISTRY_REPO: ${{ secrets.GCP_ARTIFACT_REGISTRY_REPO }}
 
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    needs: [test]
 
     steps:
       - name: Checkout code
@@ -22,45 +26,30 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Authenticate with GCP
+      - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          workload_identity_provider: "projects/PROJECT_NUMBER/locations/global/workloadIdentityPools/github-actions-pool/providers/PROVIDER_ID"
+          service_account: "my-service-account@my-project.iam.gserviceaccount.com"
 
       - name: Configure gcloud CLI
         run: |
           gcloud config set project $GCP_PROJECT_ID
-          gcloud config set app/region $GCP_REGION
+          gcloud config set run/region $GCP_REGION
 
-      - name: Measure build time
-        id: build_time
+      - name: Build Docker image
         run: |
-          START=$(date +%s)
-          docker build -t gcr.io/$GCP_PROJECT_ID/$GCP_SERVICE_NAME:latest .
-          END=$(date +%s)
-          echo "Build Time: $((END-START)) seconds"
+          docker build -t $GCP_ARTIFACT_REGISTRY_REPO/$GCP_SERVICE_NAME:latest .
 
-      - name: Push to GCR
+      - name: Push to Artifact Registry
         run: |
-          docker tag gcr.io/$GCP_PROJECT_ID/$GCP_SERVICE_NAME:latest gcr.io/$GCP_PROJECT_ID/$GCP_SERVICE_NAME:latest
-          docker push gcr.io/$GCP_PROJECT_ID/$GCP_SERVICE_NAME:latest
+          docker push $GCP_ARTIFACT_REGISTRY_REPO/$GCP_SERVICE_NAME:latest
 
-      - name: Deploy to App Engine Flexible
+      - name: Deploy to Cloud Run
         run: |
-          gcloud app deploy --image-url=gcr.io/$GCP_PROJECT_ID/$GCP_SERVICE_NAME:latest --project=$GCP_PROJECT_ID --quiet
-
-      - name: Test service startup time
-        id: startup_time
-        run: |
-          URL=$(gcloud app describe --format="value(defaultHostname)")
-          START=$(date +%s)
-          until curl -s $URL; do
-            sleep 1
-          done
-          END=$(date +%s)
-          echo "Startup Time: $((END-START)) seconds"
-
-      - name: Output build and startup times
-        run: |
-          echo "Build time: ${{ steps.build_time.outputs.result }} seconds"
-          echo "Startup time: ${{ steps.startup_time.outputs.result }} seconds"
+          gcloud run deploy $GCP_SERVICE_NAME \
+            --image $GCP_ARTIFACT_REGISTRY_REPO/$GCP_SERVICE_NAME:latest \
+            --platform managed \
+            --region $GCP_REGION \
+            --allow-unauthenticated \
+            --quiet
