--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ actix-web = {version = "4", features = ["macros"]}
 supabase-actix-auth_middleware = { git = "https://github.com/hscii/jwt-middleware-crate.git" }
 actix-web-httpauth = "0.8.2"
 actix-rt = "2.10.0"
+reqwest = {version="0.12.9", features = ["json"]}
+serde_json = "1.0.132"
+serde = {version="1.0.214", features = ["derive"]}
+
 
 [lib]
 name = "service"
-path = "src/lib.rs"
+path = "src/main.rs"
